issue #588 RSSリーダー「表示件数を増やす」で記事が途中で切れて表示されてしまう (+1 squashed commits)
Squashed commits:

[cc548fa] issue #588
検索画面と最大化画面でサイドタブのトップ位置が縮小タブバーのうえにかかっている

--- a/src/main/web/skin/rssreader.css
+++ b/src/main/web/skin/rssreader.css
@@ -132,6 +132,7 @@
 }
 .infoScoop .RssReader .latestMark{
 	display: block;
+	width: 15px;
 }
 .infoScoop .widgetHeader .latestMarkTd img{
 	vertical-align: text-bottom;
