--- a/src/main/web/skin/styles.css
+++ b/src/main/web/skin/styles.css
@@ -378,11 +378,6 @@ div[id^="control_window_"] {
 	background-color: #ffffff;
 }
 
-/* lt IE8 */
-:root .maximized #portal-tree-menucontainer, :root .hiding-tab  #portal-tree-menucontainer {
-	margin-top: 3px;
-}
-
 #siteMenuOpenTd {
 	vertical-align: top;
 	height: 100%;
@@ -392,11 +387,6 @@ div[id^="control_window_"] {
 	border-left:1px solid #999999;
 	position: absolute;
 /*	cursor:col-resize;*/
-}
-
-/* lt IE8 */
-:root .maximized #siteMenuOpen, :root .hiding-tab #siteMenuOpen {
-    margin-top: 3px;
 }
 
 #siteMenuGhost{
